tests/baselines/reference/reservedNameOnModuleImportWithInterface.errors.txt
reservedNameOnModuleImportWithInterface.ts(6,12): error TS2438: Import name cannot be 'string'.


==== reservedNameOnModuleImportWithInterface.ts (1 errors) ====
    declare module test {
        interface mi_string { }
        module mi_string { }
    
        // Should error; imports both a type and a module, which means it conflicts with the 'string' type.
        import string = mi_string;
               ~~~~~~
!!! error TS2438: Import name cannot be 'string'.
    }
    